--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,10 @@
+main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
+.card {
+    margin: 32px;
+}
