--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,30 @@
 main {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#all-items-list {
+    display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
 }
 
+#item-search-input {
+    width: 60%;
+    margin: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .card {
     margin: 32px;
 }
+
+.card-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
